--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "applicantz",
+  "name": "dayz-armbands",
   "version": "0.0.1",
-  "description": "Application Handler for Discord",
+  "description": "A Discord Bot to handle DayZ server flags and armbands for in game factions.",
   "main": "index.js",
   "nodemonConfig": {
     "ignore": ["logs/*.log", "logs/*.json"]
