--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "discord-bitfield-calculator": "^1.0.0",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.3",
+    "form-data": "^4.0.0",
     "mongodb": "^4.12.1",
     "mongoose": "^7.0.1",
     "winston": "^3.8.1"
