update/rebrand-name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dayz-armbands",
-  "version": "8.11.0",
-  "description": "A General Purpose Discord Bot for DayZ Servers.",
+  "name": "dayz-r-bot",
+  "version": "9.0.0",
+  "description": "A General Purpose Discord Bot for DayZ Nitrado Servers.",
   "main": "index.js",
   "nodemonConfig": {
     "ignore": [
