refactor/support multiple discord guilds with 1 nitrado server each + better handling for NitradoAPI

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
+# Discord Bot Token
 token='Your Discord Bot token'
+
+# MongoDB Information
 mongoURI='Your mongodb URI'
 dbo='Your mongodb database'
-SERVER_ID='Your Nitrado server ID'
-USER_ID='Your Nitrado user ID'
-AUTH_KEY='Your Nitrado Auth Token'
-GuildID='Your Discord Guild ID'
+
+# Encryption
+key='Secret Encryption Key',
+iv='Secret Initialization Vector',
+
+# Other Bot Configuration
 Dev=PROD. # or DEV.
+
+# Note: "PROD." downloads Nitrado logs every 5 minutes, "DEV." checks every 15 seconds.
+# 		Any other value for Dev will not allow the bot to run.
