fix/remove debug command

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,10 @@ node_modules/*
 # Testing/dev related
 *_test.js
 dev-*.js
+commands/debug.js
 
 # Logs
 logs/*
 
 # env
 .env
-
-# Admin Script backups
-admin/backup/*
