--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ mongoURI='Your mongodb URI'
 dbo='Your mongodb database'
 
 # Encryption
-key='Secret Encryption Key',
-iv='Secret Initialization Vector',
+key='Secret Encryption Key'
+iv='Secret Initialization Vector'
 
 # Other Bot Configuration
 Dev=PROD. # or DEV.
